# on-prem-embedding-api

./: README.md  pyproject.toml  requirements.txt
src/on_prem_embedding_api/: __init__.py
src/on_prem_embedding_api/infinity_client/: test.ipynb
src/on_prem_embedding_api/onnx_model/Convertor/: Dockerfile  convert_and_optimize.py  convert_to_trt.py
src/on_prem_embedding_api/onnx_model/Inference/: Dockerfile  app.py  requirements.txt
